v 1.4.4.8 (19 aug 2018)

Dropbox integration is finally working
Changed loading screen to something that will not scare everyone to death

changes by coderpatsy:
- Apply unicorn necropolis bonus during redshift
- Fix keyboard shortcuts
- Misc code cleanup and fixes
- Display special no trait message in languages other than en
- Fix keyboard shortcuts opening locked tabs Also guards against shortcuts opening non-existent tabs
- Add festival to happiness tooltip

v 1.4.4.7
changes by Chris:

All planets will now have a building-related cycle effects
HR effect was significantly reduced

changes by Zinsho:

You can now use shift+A/V/S/W/T/R/P/I to change tabs and escape to close dialogs

changes by Colgate:
Fix void calculations for redshift/offline progression

changes by Bioniclegenius:

Fixed Entanglers effects not working correctly
Fixed trade min/max rounding errors
___
Added Sunforge as a workaround for resource caps.


v 1.4.4.6

changes by Chris:

More default caps enforced on basic resources
Fix exploit where Combust TC price could be negative
Time impedance penalty will now be properly applied to flux years

changes by coderpatsy:

Fix workshop undo exploit
Fix AI level displaying negative
Fix HR Harvester being penalized if 0 < time.flux < 1

Updated credits section as per request of a player

v 1.4.4.5

Reduced Sunlifter price from 250 eludium to 225
Reduced Containment Chamber scaling from 1.15 to 1.125

v 1.4.4.4

Added blackcoins and blackchain

v 1.4.4.3

Added Void Resonator
Added x100 shatter button
Time Skips will no longer give you additional faith
Paradoxal Knowledge was renamed to Paradox Theory


v 1.4.4.2

changes by coderpatsy:

- Fix error when importing save without hats
- Fix typo in index.html (https://redd.it/72c4if)
- Fix minor global leak in village
- Only check neural networks once per village sim update

Balance tweaks
New chat client (now with cat pics!)

v 1.4.4.1
Changes by freeroot and coderpatsy:

A lot of stability/QOL fixes
