@@ -49,7 +49,7 @@
 
 		<script type="text/javascript">
 
-			var version = "1448";
+			var version = "1448b";
 
 			var loadingProgress = 0,
 				progressMax = 0;
@@ -312,6 +312,7 @@
 
 					Rev: 8
 						New loading screen
+						Black Radiance
 
 				</pre>
 				<a href="changelog.txt" target="_blank" style="position: relative; top: -15px;">full changelog</a>
