@@ -1572,5 +1572,9 @@
     "space.planet.helios.sunforge.label":"Sunforge",
     "space.planet.helios.sunforge.desc":"Uses the heat of the sun to smelt materials into supercondensed plasma. Every level of sunforge improves the storage space of your base metals by 1%",
 
-    "village.happiness.festival":"Festival"
+    "village.happiness.festival":"Festival",
+
+    "religion.tu.blackRadiance.label" : "Black Radiance",
+    "religion.tu.blackRadiance.desc" : "Every % of BLS meter will very slightly increase alicorn corruption rate",
+    "religion.tu.blackRadiance.flavor": "Like a rainbow in the dark"
 }
