@@ -2,6 +2,7 @@ v 1.4.4.8 (19 aug 2018)
 
 Dropbox integration is finally working
 Changed loading screen to something that will not scare everyone to death
+Black Radiance
 
 changes by coderpatsy:
 - Apply unicorn necropolis bonus during redshift
